# Frameio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  cmakeSettings.json  readme.md
examples/: main.rs  reactive.rs
examples/hello_world/: main.rs
include/frameio/: frameio.hpp
include/frameio/ImGui/: Widgets.hpp
include/framio/: framio.hpp
src/: App.cpp  App.hpp  Defines.hpp  EntryPoint.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.hpp  app.rs  buffers.rs  color.rs  element.rs  frpch.hpp  lib.rs  mesh.rs  renderer.rs  test.wgsl  util.rs  vertex.rs  viewport.rs
src/Core/: App.cpp  App.hpp  Defines.hpp  EntryPoint.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Time.hpp  UUID.cpp  UUID.hpp  Window.hpp
src/Events/: AppEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
src/ImGui/Components/: Nodes.hpp  Widgets.cpp  Widgets.hpp
src/Input/: Input.hpp  KeyCodes.hpp  MouseButtonCodes.hpp
src/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  GraphicsContext.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  todo.md
src/utils/: default.rs
